--- a/clickhouse/values.yaml
+++ b/clickhouse/values.yaml
@@ -25,7 +25,7 @@ clickhouse:
   volumeClaimTemplates:
     name: clickhouse-storage
     spec:
-      storageClassName: default
+      storageClassName: managed-premium
       accessModes: ReadWriteOnce
       resources:
         requests:
