--- a/zookeeper/values.yaml
+++ b/zookeeper/values.yaml
@@ -50,7 +50,7 @@ zookeeper:
     runAsUser: 1000
     fsGroup: 1000
   volumeClaimTemplates:
-    storageClassName: default
+    storageClassName: managed-premium
     resources:
       requests:
         storage: 10Gi 
