--- a/clickhouse/templates/clickhouse-install.yaml
+++ b/clickhouse/templates/clickhouse-install.yaml
@@ -28,6 +28,12 @@ spec:
               volumeMounts:
                 - name: {{ include "clickhouse.getResourceName" (dict "app" "clickhouse-storage" "root" $) }}
                   mountPath: /var/lib/clickhouse
+                - mountPath: /etc/clickhouse-server/config.d
+                  name: custom-config-volume
+          volumes:
+          - name: custom-config-volume
+            configMap:
+              name: clickhouse-config
     volumeClaimTemplates:
       - name: {{ index $.Values $app "volumeClaimTemplates" "name" }}
         spec:
