--- a/clickhouse/templates/clickhouse-cm.yaml
+++ b/clickhouse/templates/clickhouse-cm.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  custom.xml: |
+  users.xml: |
     <clickhouse>
         <!-- See also the files in users.d directory where the settings can be overridden. -->
 
