--- a/clickhouse/templates/clickhouse-install.yaml
+++ b/clickhouse/templates/clickhouse-install.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   configuration:
     users:
-      default/user: ''
-      default/password: ''
+      default/user:
+      default/password:
     zookeeper:
       nodes:
         - host: {{ index $.Values "zookeeper" "nodes" "host" }}
