disabled default user

--- a/clickhouse/templates/clickhouse-install.yaml
+++ b/clickhouse/templates/clickhouse-install.yaml
@@ -6,8 +6,7 @@ metadata:
 spec:
   configuration:
     users:
-      default/user:
-      default/password:
+      default/password: "clickhouse-pwd"
     zookeeper:
       nodes:
         - host: {{ index $.Values "zookeeper" "nodes" "host" }}
