--- a/clickhouse/templates/clickhouse-install.yaml
+++ b/clickhouse/templates/clickhouse-install.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   configuration:
     users:
+     default/networks/ip: "::/0"
+      default/user: "ragav"
       default/password: "clickhousepwd"
     zookeeper:
       nodes:
